packages/idris_db/test/errors/id/missing.dart
// no id property defined

import 'package:idris_db/idris_db.dart';

@collection
class Test {
  late int notId;

  late String name;
}
